--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,7 @@
   width: 0;
   height: 0;
 }
-.FAVOURITE-CITIES-CONTAINER{
+.FAVOURITE-CITIES-CONTAINER,.NOTES-SCROLL{
   scroll-behavior: smooth;
   overflow-y: scroll; /* Enable horizontal scrolling */
   scrollbar-width: none; /* Firefox */
