--- a/src/App.css
+++ b/src/App.css
@@ -1,78 +1,17 @@
-#root {
+
+/* #root {
   max-width: 1280px;
   margin-left: auto;
   margin-right: auto;
-  /* margin: 0 auto; */
-  /* padding: 2rem; */
+  
   text-align: center;
-}
+} */
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
 
 .border {
   border: 0.3px solid black;
 }
 
-.HIGHLIGHTS{
-  background-color: #e1e1f100;
-  border-top-right-radius: 32px;
-  border-bottom-right-radius: 32px;
-}
-.UserNav{
-  border-top-left-radius: 32px;
-  border-bottom-left-radius: 32px;
-}
-.INFO-BOX{
-  border-top: 0.5px solid rgba(128, 128, 128, 0.33) ;
-}
-.truncate-text {
-  white-space: nowrap; /* Prevent line breaks */
-  overflow: hidden; /* Hide overflow content */
-  text-overflow: ellipsis; /* Display ellipsis (...) */
-  max-width: 70%; /* Ensure the text doesn't overflow the container */
-}
-.CITIES-CONTAINER{
-  /* overflow-x: scroll; */
-  scroll-behavior: smooth;
-  white-space: nowrap; /* Prevent child elements from wrapping */
-  overflow-x: auto; /* Enable horizontal scrolling */
-  scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none;
-}
-.CITIES-CONTAINER::-webkit-scrollbar {
-  width: 0;
-  height: 0;
-}
 .popup{
   
   position:absolute;
@@ -84,9 +23,6 @@
 
 .input{
   outline: none;
-}
-.LOADING-STATE{
-  opacity: 0.5;
 }
 html {
   scroll-behavior: smooth;
